--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
     --radius: 5px;
     --padding: 10px;
@@ -5,9 +7,9 @@
 
 
     /* DEFAULT THEME */
-    --background-primary: #FDFDFF; 
-    --background-secondary: #F8F8FF; 
-    --component: #E6E7FF; 
+    --background-primary: #FDFDFF;
+    --background-secondary: #F8F8FF;
+    --component: #E6E7FF;
     --button-border: #9B9EF0;
     --button-background: #5B5BD6;
     --secondary-text: #5753C6;
@@ -19,13 +21,13 @@
     --light-component: #E6E7FF;
     --light-button-border: #9B9EF0;
     --light-button-background: #5B5BD6;
-    --light-secondary-text: #5753C6; 
-    --light-primary-text: #272962; 
+    --light-secondary-text: #5753C6;
+    --light-primary-text: #272962;
 
     /* DARK THEME */
-    --dark-background-primary: #13131E; 
-    --dark-background-secondary: #171625; 
-    --dark-component: #262A65; 
+    --dark-background-primary: #13131E;
+    --dark-background-secondary: #171625;
+    --dark-component: #262A65;
     --dark-button-border: #5958B1;
     --dark-button-background: #5B5BD6;
     --dark-secondary-text: #B1A9FF;
@@ -46,8 +48,10 @@
 /* BASE ELEMENT */
 html {
     color: var(--primary-text);
-    background-color: var(--background-primary)
+    background-color: var(--background-primary);
+    font-family: 'Montserrat', sans-serif;
 }
+
 
 /* NAVBAR */
 
@@ -114,7 +118,7 @@ html {
     display: block;
     width: 22px;
     height: 2px;
-    background-color: var(--button-background); 
+    background-color: var(--button-background);
     transform: translateX(-50%) translateY(-50%);
     transition: background .2s;
 }
@@ -165,6 +169,7 @@ html {
 .menu-hamburger.is-opened span:after {
     transform: translateY(0) rotate(-45deg);
 }
+
 /*
 #theme-button{
     cursor: pointer;
@@ -185,7 +190,31 @@ html {
 /* MAIN CONTENT */
 
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 940px) {
+
+    section {
+        min-height: 100vh;
+        padding: 10rem 9% 2rem;
+    }
+
+    .btn {
+        width: 15rem;
+        height: 100%;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.6rem;
+        font-weight: 600;
+        background-color: var(--button-background);
+        border-color: var(--button-border);
+        color: var(--primary-text);
+        letter-spacing: 0.1rem;
+    }
+
+    .btn-rounded {
+        border-radius: var(--radius);
+    }
+
     .header {
         position: fixed;
         top: 0;
@@ -202,10 +231,6 @@ html {
         font-weight: 600;
     }
 
-    .header .navbar {
-        justify-self: flex-end;
-    }
-
     .header .navbar a {
         font-size: 1.7rem;
         font-weight: 500;
@@ -218,8 +243,81 @@ html {
         display: none;
     }
 
-    section  {
-        min-height: 100vh;
-        padding: 10rem 9% 2rem;
+    .home {
+        display: flex;
+        align-items: center;
+        padding: 0 9%;
+    }
+
+    .home .content {
+        max-width: 60rem;
+    }
+
+    .home .content h2 {
+        font-size: 4.6rem;
+        font-weight: 700;
+        line-height: 1.3;
+    }
+
+    .home .content .text-animate {
+        position: relative;
+        width: 32.8rem;
+    }
+
+    .home .content .text-animate h3 {
+        font-size: 2.2rem;
+        font-weight: 700;
+        color: transparent;
+        -webkit-text-stroke: .7px var(--secondary-text);
+    }
+
+    .home .content p {
+        font-size: 1.6rem;
+        margin: 2rem 0 4rem;
+    }
+
+    .btn-group {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        width: 34.5rem;
+        height: 5rem;
+    }
+
+    .home-social {
+        position: absolute;
+        bottom: 4rem;
+        width: 170px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .home-social a {
+        position: relative;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        font-size: 30px;
+        border: 1px solid var(--button-border);
+        border-radius: 50%;
+    }
+
+    .home-img {
+        position: absolute;
+        top: 17rem;
+        right: 0;
+        width: 45%;
+        height: 50%;
+        background: transparent;
+        background: url('../img/development.png') no-repeat;
+        background-size: cover;
+        background-position: center;
+        transition: opacity .3s;
+    }
+
+    .home-img:hover {
+        opacity: .8;
     }
 }
