Fix: responsive for -450px viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 :root {
     --radius: 5px;
     --padding: 10px;
-    --margin: 10px;
+    --margin: 20px;
 
 
     /* DEFAULT THEME */
@@ -52,379 +52,328 @@ html {
     background-color: var(--background-primary);
     font-family: 'Montserrat', sans-serif;
 }
-
-p {
-    font-size: 1.6rem;
-    margin: 2rem 0 2rem;
+.content {
+    max-width: 60rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-section {
-    padding: 10rem 4% 2rem;
+.heading {
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 1.3;
+    margin-bottom: var(--margin);
 }
 
-span {
-    color: var(--secondary-text);
+.btn-group {
+    margin: var(--margin) 0;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 250px;
+    height: 48px;
+}
+
+.btn-alone {
+    margin: var(--margin) 0;
+    display: inline-block;
+    height: 48px;
+    /* height: 5rem; */
+}
+
+.btn {
+    height: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: var(--button-background);
+    border-color: var(--button-border);
+    color: var(--primary-text);
+    letter-spacing: 0.1rem;
+    padding: 0 10px;
+}
+
+.btn-rounded {
+    border-radius: var(--radius);
 }
 
 .header .navbar a {
     text-transform: uppercase;
 }
 
-.about .about-img {
+/* MOBILE FIRST STYLIZING */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+
+.header .logo {
+    font-size: 2rem;
+    padding: 0 2%;
+}
+
+.header .navbar {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    padding: 1rem 4%;
+    background-color: var(--button-background);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    transition: .25s ease;
+    transition-delay: .25s;
+}
+
+.header .navbar.is-opened {
+    transition-delay: 0s;
+    left: 0;
+}
+
+.header .navbar a {
+    display: block;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    margin: 3rem 0;
+}
+
+.header .navbar a:hover {
+    border: 1px solid var(--button-border);
+}
+
+.header .theme-button {
     display: none;
 }
 
-
-@media only screen and (min-width: 991px) {
-    .header .navbar {
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        padding: 1rem 4%;
-        background-color: var(--button-background);
-        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-        transition: .25s ease;
-        transition-delay: .25s;
-    }
-
-    .header .navbar.is-opened {
-        transition-delay: 0s;
-        left: 0;
-    }
-
-    .header .navbar a {
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-    }
-
-    .header .theme-button {
-        display: none;
-    }
-
-    .header .menu-hamburger {
-        width: 60px;
-        height: 60px;
-        position: relative;
-        top: 0px;
-        right: 10px;
-        transition: transform .2s;
-    }
-
-    .header .menu-hamburger span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        display: block;
-        width: 22px;
-        height: 2px;
-        background-color: var(--button-background);
-        transform: translateX(-50%) translateY(-50%);
-        transition: background .2s;
-    }
-
-    .header .menu-hamburger span:before,
-    .header .menu-hamburger span:after {
-        content: "";
-        background-color: var(--button-background);
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 22px;
-        height: 2px;
-        transition: transform 0.2s;
-    }
-
-    .header .menu-hamburger span:before {
-        transform: translateY(-6px);
-        transform-origin: 50%;
-    }
-
-    .header .menu-hamburger span:after {
-        transform: translateY(6px);
-        transform-origin: 50%;
-    }
-
-    .header .menu-hamburger:hover span:before {
-        transform: translateY(-8px);
-    }
-
-    .header .menu-hamburger:hover span:after {
-        transform: translateY(8px);
-    }
-
-    .header .menu-hamburger.is-opened {
-        transform: rotate(180deg);
-    }
-
-    .header .menu-hamburger.is-opened span {
-        background-color: transparent;
-    }
-
-    .header .menu-hamburger.is-opened span:before,
-    .header .menu-hamburger.is-opened span:after {
-        background-color: var(--component);
-    }
-
-    .header .menu-hamburger.is-opened span:before {
-        transform: translateY(0) rotate(45deg);
-    }
-
-    .header .menu-hamburger.is-opened span:after {
-        transform: translateY(0) rotate(-45deg);
-    }
-
-    .about .about-img img {
-        display: none;
-    }
+.header .menu-hamburger {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    top: 0px;
+    right: 10px;
+    transition: transform .2s;
 }
 
-@media only screen and (min-width: 1290px) {
+.header .menu-hamburger span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 22px;
+    height: 2px;
+    background-color: var(--button-background);
+    transform: translateX(-50%) translateY(-50%);
+    transition: background .2s;
+}
 
-    section {
-        min-height: 100vh;
-        padding: 10rem 9% 2rem;
-    }
+.header .menu-hamburger span:before,
+.header .menu-hamburger span:after {
+    content: "";
+    background-color: var(--button-background);
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 22px;
+    height: 2px;
+    transition: transform 0.2s;
+}
 
-    .up {
-        position: sticky;
-        bottom: 2rem;
+.header .menu-hamburger span:before {
+    transform: translateY(-6px);
+    transform-origin: 50%;
+}
 
-    }
+.header .menu-hamburger span:after {
+    transform: translateY(6px);
+    transform-origin: 50%;
+}
 
-    .up img {
-        width: 3rem;
-        height: 3rem;
-    }
+.header .menu-hamburger:hover span:before {
+    transform: translateY(-8px);
+}
 
-    .btn-group {
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        width: 34.5rem;
-        height: 5rem;
-    }
+.header .menu-hamburger:hover span:after {
+    transform: translateY(8px);
+}
 
-    .btn-alone {
-        position: relative;
-        top: 0;
-        left: 37%;
-        display: inline-block;
-        height: 5rem;
-    }
+.header .menu-hamburger.is-opened {
+    transform: rotate(180deg);
+}
 
-    .btn {
-        width: 15rem;
-        height: 100%;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.6rem;
-        font-weight: 600;
-        background-color: var(--button-background);
-        border-color: var(--button-border);
-        color: var(--primary-text);
-        letter-spacing: 0.1rem;
-    }
+.header .menu-hamburger.is-opened span {
+    background-color: transparent;
+}
 
-    .btn-rounded {
-        border-radius: var(--radius);
-    }
+.header .menu-hamburger.is-opened span:before,
+.header .menu-hamburger.is-opened span:after {
+    background-color: var(--component);
+}
 
-    .content {
-        max-width: 60rem;
-    }
+.header .menu-hamburger.is-opened span:before {
+    transform: translateY(0) rotate(45deg);
+}
 
-    .heading {
-        font-size: 4.6rem;
-        font-weight: 700;
-        line-height: 1.3;
-        margin-bottom: 2rem;
-    }
+.header .menu-hamburger.is-opened span:after {
+    transform: translateY(0) rotate(-45deg);
+}
 
-    .header {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        padding: 2rem 9%;
-    }
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
 
-    .header .logo {
-        font-size: 2.5rem;
-        font-weight: 600;
-    }
+.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5% 9%;
+}
 
-    .header .navbar {
-        position: static;
-        display: flex;
-        flex-direction: row;
-        background-color: transparent;
-        box-shadow: none;
-    }
+.home .content .text-animate {
+    position: relative;
+    width: 300px;
+    margin-bottom: var(--margin);
+}
 
-    .header .navbar a {
-        font-size: 1.3rem;
-        font-weight: 500;
-        color: var(--primary-text);
-        margin-left: 3.5rem;
-    }
+.home .content .text-animate h3 {
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: transparent;
+    -webkit-text-stroke: .7px var(--secondary-text);
+}
 
-    .header .theme-button {
-        display: block;
-    }
+.home .content .home-social {
+    position: absolute;
+    bottom: 2rem;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+}
 
-    .header .menu-hamburger {
-        display: none;
-    }
+.home .content .home-social a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    border: 1px solid var(--button-border);
+    border-radius: 50%;
+}
 
-    .home {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 5% 9%;
-    }
+.home .content .home-img {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    height: 40%;
+    background: transparent;
+    background: url('../img/development.png') no-repeat;
+    background-size: cover;
+    background-position: center;
+    transition: .5s;
+    z-index: -1;
+}
 
-    .home .content .text-animate {
-        position: relative;
-        width: 32.8rem;
-    }
+.home .content .home-img:hover {
+    opacity: .8;
+}
 
-    .home .content .text-animate h3 {
-        font-size: 2.2rem;
-        font-weight: 700;
-        color: transparent;
-        -webkit-text-stroke: .7px var(--secondary-text);
-    }
+.about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5% 9%;
+    background-color: var(--background-secondary);
+}
 
-    .home .content .home-social {
-        position: absolute;
-        bottom: 4rem;
-        width: 170px;
-        display: flex;
-        justify-content: space-between;
-    }
+.about .about-img {
+    position: relative;
+    width: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom:var(--margin);
+}
 
-    .home .content .home-social a {
-        position: relative;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        width: 40px;
-        height: 40px;
-        font-size: 30px;
-        border: 1px solid var(--button-border);
-        border-radius: 50%;
-    }
+.about .about-img img {
+    width: 90%;
+    border-radius: 50%;
+    border: .2rem solid var(--button-border);
+}
 
-    .home .content .home-img {
-        position: absolute;
-        top: 23rem;
-        right: 11.6rem;
-        width: 30%;
-        height: 40%;
-        background: transparent;
-        background: url('../img/development.png') no-repeat;
-        background-size: cover;
-        background-position: center;
-        transition: .5s;
-    }
+.resume {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5rem;
+    min-height: auto;
+}
 
-    .home .content .home-img:hover {
-        opacity: .8;
-    }
+.resume .resume-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+}
 
-    .about {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 5% 9%;
-        background-color: var(--background-secondary);
-    }
+.resume .resume-row .resume-column {
+    flex: 1 1 40rem;
+}
 
-    .about .about-img {
-        position: relative;
-        width: 25rem;
-        height: 25rem;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+.resume .resume-row .resume-column .title {
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem 2rem;
+}
 
-    .about .about-img img {
-        width: 90%;
-        border-radius: 50%;
-        border: .2rem solid var(--button-border);
-    }
+.resume .resume-row .resume-column .resume-box {
+    border-left: .2rem solid var(--button-border);
+}
 
-    .resume {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 5rem;
-        min-height: auto;
-    }
+.resume .resume-row .resume-column .resume-box .resume-content {
+    position: relative;
+    padding-left: 2rem;
+}
 
-    .resume .resume-row {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 5rem;
-    }
+.resume .resume-row .resume-column .resume-box .resume-content .card {
+    position: relative;
+    padding: 1.5rem;
+    border: 2px solid var(--button-border);
+    border-radius: var(--radius);
+    margin-bottom: 1rem;
+    overflow: hidden;
+}
 
-    .resume .resume-row .resume-column {
-        flex: 1 1 40rem;
-    }
+.resume .resume-row .resume-column .resume-box .resume-content .card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    background-color: var(--component);
+    z-index: -1;
+    transition: ease-in-out .5s;
+}
 
-    .resume .resume-row .resume-column .title {
-        font-size: 2.5rem;
-        margin: 0 0 1.5rem 2rem;
-    }
+.resume .resume-row .resume-column .resume-box .resume-content .card:hover::before {
+    width: 100%;
+}
 
-    .resume .resume-row .resume-column .resume-box {
-        border-left: .2rem solid var(--button-border);
-    }
-
-    .resume .resume-row .resume-column .resume-box .resume-content {
-        position: relative;
-        padding-left: 2rem;
-    }
-
-    .resume .resume-row .resume-column .resume-box .resume-content .card {
-        position: relative;
-        padding: 1.5rem;
-        border: 2px solid var(--button-border);
-        border-radius: var(--radius);
-        margin-bottom: 1rem;
-        overflow: hidden;
-    }
-
-    .resume .resume-row .resume-column .resume-box .resume-content .card::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 0;
-        background-color: var(--component);
-        z-index: -1;
-        transition: ease-in-out .5s;
-    }
-
-    .resume .resume-row .resume-column .resume-box .resume-content .card:hover::before {
-        width: 100%;
-    }
-
-    .project {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 5rem;
-        background-color: var(--background-secondary);
-    }
+.project {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5rem;
+    background-color: var(--background-secondary);
 }
