--- a/css/styles.css
+++ b/css/styles.css
@@ -384,3 +384,71 @@ section {
         height: 27%;
     }
 }
+
+@media only screen and (min-width: 1000px) {
+
+    .header .navbar {
+        position : static;
+        box-shadow: none;
+        background-color: inherit;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .header .navbar a {
+        font-size: 1.6rem;
+    }
+
+    .header .menu-hamburger {
+        display: none;
+    }
+
+    .header .theme-button {
+        display: block;
+        margin-right: var(--margin);
+    } 
+
+    .home {
+        justify-content: start;
+    }
+
+    .home .content .home-img {
+        top: 32%;
+        right: 0;
+        width: 45%;
+        height:  50%;
+    }
+
+    .home .content {
+        width: 50%;
+        align-items: flex-start;
+    }
+
+    .about .about-img img {
+        width: 30%;
+    }
+
+}
+
+@media only screen and (min-width: 1280px) {
+
+    .header .logo {
+        font-size : 3rem;
+    }
+    .header .navbar a:hover {
+        border: none;
+    }
+    
+    .home .content .home-img {
+        width: 50%;
+    }
+
+    p {
+        font-size: 2rem;
+    }
+
+    .heading {
+        font-size: 4rem;
+    }
+}
