--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,10 @@ html {
 }
 
 .heading {
-    font-size: 2.5rem;
+    font-size: 1.6rem;
     font-weight: 700;
     line-height: 1.3;
-    margin-bottom: var(--margin);
+    margin-bottom: 12px;
 }
 
 .btn-group {
@@ -238,12 +238,12 @@ section {
 
 .home .content .text-animate {
     position: relative;
-    width: 300px;
-    margin-bottom: var(--margin);
+    width: 260px;
+    margin-bottom: 12px;
 }
 
 .home .content .text-animate h3 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: .7px var(--secondary-text);
@@ -273,7 +273,7 @@ section {
     position: absolute;
     top: 20px;
     width: 100%;
-    height: 40%;
+    height: 35%;
     background: transparent;
     background: url('../img/development.png') no-repeat;
     background-size: cover;
