--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,7 @@ section {
     position: relative;
     width: 260px;
     margin-bottom: 12px;
+    z-index: -1;
 }
 
 .home .content .text-animate h3 {
