--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ html {
     background-color: var(--background-primary);
     font-family: 'Montserrat', sans-serif;
 }
+
 .content {
     max-width: 60rem;
     display: flex;
@@ -73,6 +74,7 @@ html {
     justify-content: space-between;
     width: 250px;
     height: 48px;
+    z-index: -1;
 }
 
 .btn-alone {
@@ -111,6 +113,9 @@ html {
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    width: 100%;
+    position: fixed;
+    top: 0;
 }
 
 .header .logo {
@@ -231,6 +236,7 @@ section {
 
 .home {
     display: flex;
+    margin-top: 75px;
     flex-direction: column;
     justify-content: center;
     padding: 5% 9%;
@@ -255,6 +261,7 @@ section {
     width: 170px;
     display: flex;
     justify-content: space-between;
+    z-index: -1;
 }
 
 .home .content .home-social a {
@@ -291,8 +298,8 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5% 9%;
     background-color: var(--background-secondary);
+    margin-top: 40px;
 }
 
 .about .about-img {
@@ -342,6 +349,7 @@ section {
 .resume .resume-row .resume-column .resume-box .resume-content {
     position: relative;
     padding-left: 2rem;
+    z-index: -1;
 }
 
 .resume .resume-row .resume-column .resume-box .resume-content .card {
@@ -351,6 +359,7 @@ section {
     border-radius: var(--radius);
     margin-bottom: 1rem;
     overflow: hidden;
+    z-index: -1;
 }
 
 .resume .resume-row .resume-column .resume-box .resume-content .card::before {
